<resources>
    <string name="app_name">Smite Team Generator</string>
    <string name="how_many_players_are_there">Choose Team Size</string>
    <string name="one_player">Solo</string>
    <string name="two_player">Duo</string>
    <string name="three_player">Joust</string>
    <string name="four_player">Siege</string>
    <string name="five_player">Full</string>
    <string name="donate">Buy Me a Coffee</string>
    <string name="reroll">Reroll</string>
    <string name="share">Share Team</string>
    <string name="settings">Settings</string>
    <string name="view_saved_players">Saved Builds</string>
    <string name="delete_this_build">Delete this Build</string>
    <string name="delete_build_confirmation">Do you want to delete this build?</string>
    <string name="no_saved">You don\'t have any saved builds</string>
    <string name="roadmap">Road Map</string>
    <string name="appinfo">App Info</string>
    <string name="report_issue">Report an issue</string>
    <string name="app_logo">App logo</string>
    <string-array name="buildtypes">
        <item>Default Random</item>
        <item>Full Offensive</item>
        <item>Full Defensive</item>
        <item>Half-and-Half</item>
        <item>Off on Off, Def on Def</item>
    </string-array>
    <string-array name="buildtypesindex">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
