<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_saved"
        android:title="@string/view_saved_players"
        android:icon="@drawable/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_donate"
        android:title="@string/donate"
        android:icon="@drawable/ic_buymeacoffee"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_options"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_roadmap"
        android:title="@string/roadmap"/>

</menu>