<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="35dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/appSubtitle"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:srcCompat="@drawable/applogo"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/appSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Version: X.X.X\nSTG-Lib Version: X.X.X\nProudly coded by Joshua Luce"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/supportButton"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FD803F"
            android:drawableStart="@drawable/ic_buymeacoffee"
            android:text="@string/donate" />

        <Button
            android:id="@+id/roadmapButton"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0078BD"
            android:drawableStart="@drawable/ic_trello"
            android:drawablePadding="5dp"
            android:text="@string/roadmap" />

        <Button
            android:id="@+id/issueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:backgroundTint="#F3F3F3"
            android:drawableStart="@drawable/ic_gitlab"
            android:drawablePadding="5dp"
            android:text="@string/report_issue"
            android:textColor="@android:color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>